<resources>
    <!-- LaunchActivity -->
    <string name="app_name">Amadeus</string>
    <string name="call">Connect to Kurisu?</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnected">Disconnected.</string>
    <string name="default_lang" translatable="false">system</string>
    <string name="default_recog_lang" translatable="false">en-US</string>
    <string name="google_app_error">Google App wasn\'t detected.</string>
    <string name="assist_app_error">Google App is\'t default Assist &amp; voice input app.</string>
    <string name="incoming_call">Call from Kurisu.</string>
    <string name="notification_text">Your waifu misses you.</string>

    <!-- Settings -->
    <string name="pref_app_settings">Application settings</string>
    <string name="pref_app_restart_required">App restart required</string>
    <string name="pref_recog_lang">Recognition language</string>
    <string name="pref_recog_lang_desc">Select voice recognition language</string>
    <string name="pref_lang">Language</string>
    <string name="pref_lang_desc">Select app language (app restart required)</string>

    <string name="pref_lang_system">System Language (Default)</string>
    <string name="pref_lang_en" translatable="false">English</string>
    <string name="pref_lang_ru" translatable="false">Русский</string>
    <string name="pref_lang_pt" translatable="false">Português</string>
    <string name="pref_lang_es" translatable="false">Español</string>
    <string name="pref_lang_it" translatable="false">Italiano</string>
    <string name="pref_lang_fr" translatable="false">Française</string>
    <string name="pref_lang_de" translatable="false">Deutsch</string>
    <string name="pref_lang_ja" translatable="false">日本語</string>
    <string name="pref_lang_zh_cn" translatable="false">中文（大陆）</string>

    <string name="pref_subtitles">Show subtitles</string>
    <string name="pref_subtitles_desc">Shows subtitles for Amadeus\' answers</string>
    <string name="pref_notification">Show &quot;XP&quot;-Icon</string>
    <string name="pref_notification_desc">Shows Icon in the notification bar (app restart required)</string>
    <string name="pref_alarm">Alarm</string>
    <string name="pref_alarm_settings">Alarm settings</string>
    <string name="pref_alarm_setup">Alarm setup</string>
    <string name="pref_alarm_ringtone">Alarm ringtone</string>
    <string name="pref_alarm_ringtone_desc">Select ringtone for alarm</string>
    <string name="pref_alarm_vibrate">Vibrate on alarm</string>
    <string name="pref_alarm_24hour_format">24-hour format</string>

    <string name="pref_alarm_ringtone_gate_of_steiner">Gate Of Steiner</string>
    <string name="pref_alarm_ringtone_village">Village</string>
    <string name="pref_alarm_ringtone_beginning_of_fight">Beginning Of Fight</string>
    <string name="pref_alarm_ringtone_easygoingness">Easygoingness</string>
    <string name="pref_alarm_ringtone_reunion">Reunion</string>
    <string name="pref_alarm_ringtone_precaution">Precaution</string>
    <string name="pref_alarm_ringtone_over_the_sky">Over The Sky</string>

    <!-- Subtitles -->
    <string name="line_hello">Hello.</string>
    <string name="line_dont_call_me_like_that">Don\'t call me like that!</string>
    <string name="line_but_i_refuse">But I refuse.</string>
    <string name="line_devilish_pervert">I never thought you were such a devilish pervert. I guess I misjudged you.</string>
    <string name="line_i_guess">I guess.</string>
    <string name="line_nice">Nice.</string>
    <string name="line_pervert_confirmed">PERVERT CONFIRMED.</string>
    <string name="line_sorry">Sorry.</string>
    <string name="line_sounds_tough">Sounds tough.</string>
    <string name="line_this_guy_hopeless">This guy is hopeless, better do something quick.</string>
    <string name="line_gah">Gah.</string>
    <string name="line_dont_add_tina">Stop adding -tina!</string>
    <string name="line_pervert_idiot_wanttodie">You pervert! Are you an idiot!? Do you wanna die?!</string>
    <string name="line_pleased_to_meet_you">I\'m Makise Kurisu, pleased to meet you.</string>
    <string name="line_who_the_hell_christina">Who the hell is Christina?</string>
    <string name="line_why_christina">I am worried about it. Why am I Christina?</string>
    <string name="line_christina">Christina?</string>
    <string name="line_ask_me_whatever">Ask me whatever you want. I\'ll answer anything I can.</string>
    <string name="line_could_i_help">Um, could I help you with that?</string>
    <string name="line_what_do_you_want">What do you want?</string>
    <string name="line_what_is_it">What is it?</string>
    <string name="line_heheh">Hehehe.</string>
    <string name="line_huh_why_say">Huh? Why do you say that?</string>
    <string name="line_you_sure">You sure?</string>
    <string name="line_nice_to_meet_okabe">Nice to meet you, Okabe Rintaro. I\'m Makise Kurisu.</string>
    <string name="line_look_forward_to_working">I look forward to working with you.</string>
    <string name="line_senpai_question">Anyway, can I ask a question?</string>
    <string name="line_senpai_question_mark">Um… Senpai? Excuse me.</string>
    <string name="line_senpai_what_we_talkin">Hey Senpai, about what we were just talking about…</string>
    <string name="line_senpai_who_is_this">Uh, who is this?</string>
    <string name="line_senpai_please_dont_tell">Senpai, please, don\'t tell the others…</string>
    <string name="line_still_not_happy">I\'m still not happy about that.</string>
    <string name="line_tm_nonsense">That\s pure nonsense.</string>
    <string name="line_tm_not_possible">Let\'s see… My conclusion is that it\'s not possible.</string>
    <string name="line_tm_scientist_no_evidence">That\'s probably because scientists haven\'t discovered something important yet.</string>
    <string name="line_tm_we_dont_know">But we don\'t know for sure that it\'s impossible, I guess.</string>
    <string name="line_tm_you_said">A time machine, you said?</string>
    <string name="line_humans_software">Even humans speak of themselves as a combination of hardware and software, right?</string>
    <string name="line_memory_complex">But memory data isn\'t like normal data. It\'s much more complex.</string>
    <string name="line_secret_diary">I keep a secret diary.</string>
    <string name="line_modifying_memories_impossible">Modifying my memories? It\'s theoretically possible.</string>
    <string name="line_memories_christina">For example, it would be possible to make me think my name was Christina.</string>
    <string name="line_gah_extended">Gah. Ah… Aaaaah.</string>
    <string name="line_Leskinen_awesome">Awesome, he\'s really something!</string>
    <string name="line_Leskinen_nice">Nice!</string>
    <string name="line_Leskinen_oh_no">Oh no!</string>
    <string name="line_Leskinen_shaman">Where are the Japanese shaman girls, Lintahlo?</string>
    <string name="line_Leskinen_holy_cow">Holy Cow! So I said we should come soon.</string>
    <string name="line_should_christina">Or should I have introduced myself with, \"It\'s Christina\"?</string>
    <string name="line_ok">OK.</string>

    <!-- Input strings -->
    <string name="christina">christina</string>
    <string name="nullpo">nullpo</string>
    <string name="the_zombie">the zombie</string>
    <string name="the_zombie2">the zombie</string>
    <string name="celeb17">celeb seventeen</string>
    <string name="atchannel">atchannel</string>
    <string name="kurigohan">kurigohan</string>
    <string name="kamehameha">kamehameha</string>
    <string name="salieri">salieri</string>
    <string name="maho">maho</string>
    <string name="hiyajo">hiyajo</string>
    <string name="time_machine">time machine</string>
    <string name="cern">cern</string>
    <string name="time_travel">time travel</string>
    <string name="time_travel2">time travel</string>
    <string name="memory">memory</string>
    <string name="amadeus">amadeus</string>
    <string name="science">science</string>
    <string name="hello">hello</string>
    <string name="good_morning">good morning</string>
    <string name="konnichiwa">good afternoon</string>
    <string name="good_evening">good evening</string>
    <string name="nice_body">nice body</string>
    <string name="hot">hot</string>
    <string name="sexy">sexy</string>
    <string name="boobies">boobies</string>
    <string name="oppai">oppai</string>
    <string name="robotics_notes">Robotics Notes</string>
    <string name="antimatter">antimatter</string>
    <string name="assistant">assistant</string>
    <string name="open">open</string>
    <string name="alarm_on_off">Alarm On/Off</string>
</resources>