<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Subtitle Settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="show_subtitles"
            android:summary="@string/pref_subtitles_desc"
            android:title="@string/pref_subtitles" />
        <ListPreference
            android:key="recognition_lang"
            android:title="@string/pref_recog_lang"
            android:summary="@string/pref_recog_lang_desc"
            android:defaultValue="@string/default_recog_lang"
            android:entries="@array/languagesRecogArray"
            android:entryValues="@array/languagesRecogValues" />
        <ListPreference
            android:summary="@string/pref_lang_desc"
            android:title="@string/pref_lang"
            android:key="lang"
            android:defaultValue="@string/default_lang"
            android:entries="@array/languagesArray"
            android:entryValues="@array/languagesValues" />
    </PreferenceCategory>
</PreferenceScreen>